--- a/src/components/Nav.css
+++ b/src/components/Nav.css
@@ -6,12 +6,12 @@
   background-color: #f7f3f0;
   border: transparent 0.2rem;
   border-radius: 1.5rem;
-  filter: drop-shadow(0 0.3rem 0.15rem black);
+  filter: drop-shadow(0 0.3rem 0.15rem grey);
 }
 
 .nav-grid {
   display: grid;
-  grid-template-columns: repeat(4, auto);
+  grid-template-columns: auto repeat(3, auto);
 }
 
 .nav-list {
@@ -20,4 +20,24 @@
 
 .nav-list-item {
   text-align: center;
+}
+
+.nav-list-color {
+  color: #32281e;
+}
+
+.active {
+  color: #f7f3f0;
+  display: flex;
+  justify-content: center;
+  background-color: #32281e;
+  border-radius: 1rem;
+}
+
+.icon-center {
+  display: inline-flex;
+  justify-content: center;
+  background-color: #32281e;
+  border-radius: 1rem;
+  padding: 0;
 }
