--- a/src/components/SelectedWork.css
+++ b/src/components/SelectedWork.css
@@ -5,4 +5,31 @@
   .selected-works-page {
     height: 100vh;
   }
+
+  .selected-works-headings-list {
+    display: grid;
+    grid-template-columns: repeat(12, 1fr);
+    grid-template-rows: auto;
+    gap: 1rem;
+  }
+
+  .headings-list-item-a {
+    grid-column: 1 / 3;
+    grid-row: 1 / 2;
+  }
+
+  .headings-list-item-b {
+    grid-column: 3 / 6;
+    grid-row: 1 / 2;
+  }
+
+  .headings-list-item-c {
+    grid-column: 9 / 12;
+    grid-row: 1 / 2;
+  }
+
+  .headings-list-item-d {
+    grid-column: 12 / 13;
+    grid-row: 1 / 2;
+  }
 }
