--- a/src/components/SelectedWork.css
+++ b/src/components/SelectedWork.css
@@ -3,12 +3,25 @@
 
 @media only screen and (min-width: 70rem) {
   .selected-works-page {
-    height: 100vh;
+    padding: 0 2rem;
   }
 
   .selected-works-image {
     height: 5rem;
     width: auto;
+  }
+
+  .selected-works-intro-text,
+  .selected-works-page {
+    padding-bottom: 6rem;
+  }
+
+  .selected-works-headings-list {
+    padding-bottom: 2rem;
+  }
+
+  .selected-works-list-item {
+    padding-bottom: 0.5rem;
   }
 
   .selected-work-border-top,
@@ -24,31 +37,51 @@
     display: grid;
     grid-template-columns: repeat(12, 1fr);
     grid-template-rows: auto;
-    gap: 1rem;
+    column-gap: 1rem;
   }
 
-  .headings-list-item-a,
-  .selected-work-heading {
+  .selected-works-list-item {
+    row-gap: 0.5rem;
+  }
+
+  .headings-list-item-a {
     grid-column: 1 / 3;
     grid-row: 1 / 2;
   }
 
-  .headings-list-item-b,
-  .selected-works-image {
+  .headings-list-item-b {
     grid-column: 3 / 6;
     grid-row: 1 / 2;
   }
 
-  .headings-list-item-c,
-  .selected-work-type {
+  .headings-list-item-c {
     grid-column: 9 / 12;
     grid-row: 1 / 2;
   }
 
-  .headings-list-item-d,
-  .selected-work-date {
+  .headings-list-item-d {
     grid-column: 12 / 13;
     grid-row: 1 / 2;
+  }
+
+  .selected-work-heading {
+    grid-column: 1 / 3;
+    grid-row: 2 / 3;
+  }
+
+  .selected-works-image {
+    grid-column: 3 / 6;
+    grid-row: 2 / 3;
+  }
+
+  .selected-work-type {
+    grid-column: 9 / 12;
+    grid-row: 2 / 3;
+  }
+
+  .selected-work-date {
+    grid-column: 12 / 13;
+    grid-row: 2 / 3;
   }
 
   .selected-works-list-item {
@@ -57,11 +90,11 @@
 
   .selected-work-border-top {
     grid-column: 1 / 13;
-    grid-row: 1 / 2;
+    grid-row: 1 / 3;
   }
 
   .selected-work-border-bottom {
     grid-column: 1 / 13;
-    grid-row: 2 / 3;
+    grid-row: 3 / 4;
   }
 }
