--- a/src/components/About.css
+++ b/src/components/About.css
@@ -2,7 +2,49 @@
 }
 
 @media only screen and (min-width: 70rem) {
+  .about-page-intro {
+    font-size: 8rem;
+    line-height: 7.5rem;
+  }
+
+  .heading-italic {
+    font-family: "Pinyon Script", cursive;
+  }
+
+  .about-page-intro {
+    font-family: "neue-haas-grotesk-display", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+    letter-spacing: 0.3rem;
+  }
+
+  .about-description-paragraph {
+    padding-bottom: 1rem;
+  }
+
+  .about-page-intro {
+    padding-bottom: 4rem;
+  }
+
+  .about-description {
+    padding-bottom: 8rem;
+  }
+
   .about-page {
-    height: 100vh;
+    display: grid;
+    grid-template-columns: repeat(12, 1fr);
+    grid-template-rows: auto;
+    gap: 1rem;
+    padding: 0 2rem;
+  }
+
+  .about-page-intro {
+    grid-column: 1 / 13;
+    grid-row: 1 / 2;
+  }
+
+  .about-description {
+    grid-column: 1 / 6;
+    grid-row: 2 / 3;
   }
 }
