--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -21,10 +21,11 @@
     font-weight: normal;
     text-indent: -0.55rem;
     padding-left: 2rem;
+    font-family: "Pinyon Script", cursive;
   }
 
   .contact-details {
-    padding-top: 13rem;
+    padding-top: 12rem;
   }
 
   .home-main-grid {
