--- a/src/components/SelectedWork.css
+++ b/src/components/SelectedWork.css
@@ -27,17 +27,23 @@
   .selected-work-border-top,
   .selected-work-border-bottom {
     display: block;
-    height: 0.1rem;
-    background-color: black;
+    height: 0.05rem;
+    background-color: #542316;
   }
 
   .selected-works-headings-list,
   .selected-works-list,
-  .selected-works-list-item {
+  .selected-works-list-item,
+  .selected-works-intro {
     display: grid;
     grid-template-columns: repeat(12, 1fr);
     grid-template-rows: auto;
     column-gap: 1rem;
+  }
+
+  .selected-works-intro-text {
+    grid-column: 1 / 6;
+    grid-row: 2 / 3;
   }
 
   .selected-works-list-item {
