--- a/src/components/MusicPlayer.css
+++ b/src/components/MusicPlayer.css
@@ -1,5 +1,99 @@
+.audio-button {
+  border: none;
+  color: #542316;
+  background-color: transparent;
+}
+
+.audio-player {
+  position: fixed;
+  width: 100%;
+}
+
 @media only screen and (min-width: 50rem) {
 }
 
 @media only screen and (min-width: 70rem) {
+  .audio-player {
+    display: grid;
+    grid-template-columns: repeat(12, 1fr);
+    grid-template-rows: auto;
+    column-gap: 1rem;
+    padding: 1rem 2rem;
+  }
+
+  .song-name,
+  .audio-time-before-after {
+    font-size: 0.7rem;
+  }
+
+  .progress-bar {
+    --bar-bg: #542316;
+
+    appearance: none;
+    background: var(--bar-bg);
+    border-radius: 1rem;
+    position: relative;
+    width: 100%;
+    height: 0.3rem;
+    outline: none;
+    cursor: pointer;
+  }
+
+  /* progress bar - safari */
+  .progress-bar::-webkit-slider-runnable-track {
+    background: var(--bar-bg);
+    border-radius: 1rem;
+    position: relative;
+    width: 100%;
+    height: 0.3rem;
+    outline: solid 0.1rem #f7f3f0;
+    cursor: pointer;
+  }
+
+  /* progress bar - chrome and safari */
+  .progress-bar::before {
+    content: "";
+    width: 100%;
+    height: 0.3rem;
+    background-color: var(--bar-bg);
+    border-radius: 1rem;
+    outline: none;
+    cursor: pointer;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 2;
+  }
+
+  /* knobby - chrome and safari */
+  .progress-bar::-webkit-slider-thumb {
+    -webkit-appearance: none;
+    height: 0.7rem;
+    width: 0.7rem;
+    border-radius: 50%;
+    border: none;
+    background-color: var(--bar-bg);
+    position: relative;
+    z-index: 3;
+    margin: -3px 0 0 0;
+  }
+
+  .progress-bar:active::-webkit-slider-thumb {
+    transform: scale(1.3);
+  }
+
+  .song-name {
+    grid-column: 1 / 2;
+    grid-row: 1 / 2;
+  }
+
+  .audio-progress-bar {
+    grid-column: 2 / 12;
+    grid-row: 1 / 2;
+  }
+
+  .audio-controls {
+    grid-column: 12 / 13;
+    grid-row: 1 / 2;
+  }
 }
