--- a/src/components/MusicPlayer.css
+++ b/src/components/MusicPlayer.css
@@ -26,6 +26,17 @@
     font-size: 0.7rem;
   }
 
+  .audio-controls,
+  .audio-control-buttons {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .audio-time-before-after {
+    padding-right: 1rem;
+  }
+
   .progress-bar {
     --bar-bg: #542316;
 
@@ -44,6 +55,7 @@
     background: var(--bar-bg);
     border-radius: 1rem;
     position: relative;
+
     width: 100%;
     height: 0.3rem;
     outline: solid 0.1rem #f7f3f0;
@@ -88,12 +100,12 @@
   }
 
   .audio-progress-bar {
-    grid-column: 2 / 12;
+    grid-column: 2 / 11;
     grid-row: 1 / 2;
   }
 
   .audio-controls {
-    grid-column: 12 / 13;
+    grid-column: 11 / 13;
     grid-row: 1 / 2;
   }
 }
