--- a/src/components/SelectedWork.css
+++ b/src/components/SelectedWork.css
@@ -85,6 +85,11 @@
     grid-row: 2 / 3;
   }
 
+  .selected-work-description {
+    grid-column: 9 / 12;
+    grid-row: 3 / 4;
+  }
+
   .selected-work-date {
     grid-column: 12 / 13;
     grid-row: 2 / 3;
