--- a/src/components/SelectedWork.css
+++ b/src/components/SelectedWork.css
@@ -10,6 +10,18 @@
   transition: all 1s cubic-bezier(0.5, 0.1, 0.5, 0.1);
 }
 
+.selected-works-image.closed {
+  height: 6rem;
+  width: auto;
+  transition: all 1s cubic-bezier(0.2, 1, 0.3, 1);
+}
+
+.selected-works-image.open {
+  height: 18rem;
+  width: auto;
+  transition: all 1s cubic-bezier(0.5, 0.1, 0.5, 0.1);
+}
+
 .selected-works-list-item {
   cursor: pointer;
 }
@@ -20,11 +32,6 @@
 @media only screen and (min-width: 70rem) {
   .selected-works-page {
     padding: 0 2rem;
-  }
-
-  .selected-works-image {
-    height: 5rem;
-    width: auto;
   }
 
   .selected-works-intro-text,
@@ -103,7 +110,8 @@
 
   .selected-work-description {
     grid-column: 9 / 12;
-    grid-row: 3 / 4;
+    grid-row: 2 / 3;
+    padding-top: 3rem;
   }
 
   .selected-work-date {
