--- a/src/components/About.css
+++ b/src/components/About.css
@@ -1,3 +1,15 @@
+.about-page {
+  padding: 1rem;
+}
+
+.about-page-intro {
+  padding-bottom: 2rem;
+}
+
+.about-description-paragraph {
+  padding-bottom: 1rem;
+}
+
 @media only screen and (min-width: 50rem) {
 }
 
