--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -4,6 +4,12 @@
 
 .home-page {
   display: grid;
+  padding: 1rem;
+}
+
+.home-heading {
+  padding-top: 25rem;
+  padding-bottom: 1rem;
 }
 
 @media only screen and (min-width: 50rem) {
@@ -20,6 +26,8 @@
     margin-block-end: 0em;
     font-weight: normal;
     text-indent: -0.55rem;
+    padding-top: 0rem;
+    padding-bottom: 0rem;
     padding-left: 2rem;
     font-family: "Pinyon Script", cursive;
   }
