--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,10 @@
   box-sizing: border-box;
 }
 
+p {
+  font-size: 0.8rem;
+}
+
 p,
 h1,
 h2,
@@ -34,4 +38,13 @@ a {
 .about-page,
 .extras-page {
   padding-top: 5rem;
+}
+
+@media only screen and (min-width: 50rem) {
+}
+
+@media only screen and (min-width: 70rem) {
+  p {
+    font-size: 1rem;
+  }
 }
