--- a/src/components/About.css
+++ b/src/components/About.css
@@ -1,5 +1,5 @@
 .about-page {
-  padding: 1rem;
+  padding: 0 1rem;
 }
 
 .about-page-intro {
@@ -10,7 +10,22 @@
   padding-bottom: 1rem;
 }
 
-@media only screen and (min-width: 50rem) {
+@media only screen and (min-width: 40rem) {
+  .about-page {
+    padding: 0 2rem;
+  }
+
+  .about-page-intro {
+    font-size: 6rem;
+    line-height: 5.5rem;
+  }
+
+  .about-page-intro {
+    font-family: "neue-haas-grotesk-display", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+    letter-spacing: 0.2rem;
+  }
 }
 
 @media only screen and (min-width: 70rem) {
@@ -19,15 +34,12 @@
     line-height: 7.5rem;
   }
 
-  .heading-italic {
-    font-family: "Pinyon Script", cursive;
+  .about-page-intro {
+    letter-spacing: 0.3rem;
   }
 
-  .about-page-intro {
-    font-family: "neue-haas-grotesk-display", sans-serif;
-    font-weight: 400;
-    font-style: normal;
-    letter-spacing: 0.3rem;
+  .heading-italic {
+    font-family: "Pinyon Script", cursive;
   }
 
   .about-description-paragraph {
