--- a/src/components/About.css
+++ b/src/components/About.css
@@ -10,6 +10,22 @@
   padding-bottom: 1rem;
 }
 
+.about-page-intro {
+  font-size: 3rem;
+  line-height: 2.9rem;
+}
+
+.about-page-intro {
+  font-family: "neue-haas-grotesk-display", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+  letter-spacing: 0.1rem;
+}
+
+.heading-italic {
+  font-family: "Pinyon Script", cursive;
+}
+
 @media only screen and (min-width: 40rem) {
   .about-page {
     padding: 0 2rem;
@@ -21,9 +37,6 @@
   }
 
   .about-page-intro {
-    font-family: "neue-haas-grotesk-display", sans-serif;
-    font-weight: 400;
-    font-style: normal;
     letter-spacing: 0.2rem;
   }
 }
@@ -36,10 +49,6 @@
 
   .about-page-intro {
     letter-spacing: 0.3rem;
-  }
-
-  .heading-italic {
-    font-family: "Pinyon Script", cursive;
   }
 
   .about-description-paragraph {
