--- a/src/components/About.css
+++ b/src/components/About.css
@@ -48,6 +48,10 @@
     line-height: 7.5rem;
   }
 
+  .about-profile-image {
+    height: 25rem;
+  }
+
   .about-page-intro {
     letter-spacing: 0.3rem;
   }
@@ -79,6 +83,11 @@
 
   .about-description {
     grid-column: 1 / 6;
+    grid-row: 2 / 3;
+  }
+
+  .about-profile-image {
+    grid-column: 9;
     grid-row: 2 / 3;
   }
 }
