--- a/src/components/SelectedWork.css
+++ b/src/components/SelectedWork.css
@@ -13,14 +13,12 @@
 .selected-work-description.hidden {
   max-height: 0;
   overflow: hidden;
-  transition: all 1s cubic-bezier(0.2, 1, 0.3, 1);
 }
 
 .selected-work-description.show {
   max-height: 20rem;
-  overflow: hidden;
+  overflow: visible;
   padding-bottom: 1rem;
-  transition: all 1s cubic-bezier(0.5, 0.1, 0.5, 0.1);
 }
 
 .selected-works-video.closed {
@@ -78,26 +76,32 @@
     padding-bottom: 0;
   }
 
-  .selected-works-video.closed {
-    height: 9rem;
-    width: 15rem;
-    border: none;
-    transition: all 1s cubic-bezier(0.2, 1, 0.3, 1);
+  .video-wrapper.closed {
+    height: 20rem;
+    width: 40rem;
+    overflow: hidden;
   }
 
-  .selected-works-video.open {
-    height: 17rem;
-    width: 100%;
-    border: none;
-    transition: all 1s cubic-bezier(0.2, 1, 0.3, 1);
+  .video-wrapper.open {
+    overflow: visible;
   }
 
   .selected-works-headings-list {
     padding-bottom: 1rem;
   }
 
-  .selected-works-list-item {
+  .selected-works-list-item.closed {
+    height: auto;
     padding-bottom: 0.5rem;
+    grid-template-rows: 0rem;
+    transition: all 1s cubic-bezier(0.2, 1, 0.3, 1);
+  }
+
+  .selected-works-list-item.open {
+    height: 25rem;
+    padding-bottom: 0.5rem;
+    grid-template-rows: min-content;
+    transition: all 1s cubic-bezier(0.2, 1, 0.3, 1);
   }
 
   /* .selected-works-headings-list,
@@ -192,17 +196,40 @@
     padding-bottom: 0;
   }
 
-  .selected-work-description.show {
-    padding-top: 3rem;
-  }
-
   .selected-works-page {
     padding: 0 2rem;
   }
 
-  .selected-works-intro-text,
   .selected-works-page {
     padding-bottom: 6rem;
+  }
+
+  .video-wrapper.closed {
+    max-height: 0;
+    overflow: hidden;
+  }
+
+  .video-wrapper.open {
+    max-height: 20rem;
+    overflow: visible;
+  }
+
+  .selected-works-video {
+    height: 20rem;
+    width: 40rem;
+  }
+
+  .selected-works-list-item.closed {
+    height: 2.5rem;
+    padding-bottom: 0.5rem;
+    transition: all 1s cubic-bezier(0.2, 1, 0.3, 1);
+  }
+
+  .selected-works-list-item.open {
+    height: 25rem;
+    padding-bottom: 0.5rem;
+    grid-template-rows: min-content;
+    transition: all 1s cubic-bezier(0.2, 1, 0.3, 1);
   }
 
   .selected-works-headings-list,
@@ -211,58 +238,54 @@
   .selected-works-intro {
     display: grid;
     grid-template-columns: repeat(12, 1fr);
-    grid-template-rows: auto;
+    grid-template-rows: min-content;
     column-gap: 1rem;
   }
 
-  .selected-works-intro-text {
-    grid-column: 1 / 6;
-    grid-row: 2 / 3;
-  }
-
   .headings-list-item-a {
-    grid-column: 1 / 3;
+    grid-column: 1 / 5;
     grid-row: 1 / 2;
   }
 
   .headings-list-item-b {
-    grid-column: 3 / 6;
+    grid-column: 5 / 11;
     grid-row: 1 / 2;
   }
 
   .headings-list-item-c {
-    grid-column: 9 / 12;
+    grid-column: 11 / 13;
     grid-row: 1 / 2;
   }
 
-  .headings-list-item-d {
-    grid-column: 12 / 13;
+  .selected-works-intro-text {
+    grid-column: 1 / 9;
+    grid-row: 1 / 2;
+  }
+
+  .selected-work-type {
+    grid-column: 5 / 11;
     grid-row: 1 / 2;
   }
 
   .selected-work-heading {
-    grid-column: 1 / 3;
-    grid-row: 2 / 3;
+    grid-column: 1 / 5;
+    grid-row: 1 / 2;
+  }
+
+  .selected-work-date {
+    grid-column: 11 / 13;
+    grid-row: 1 / 2;
   }
 
   .video-wrapper {
-    grid-column: 3 / 6;
-    grid-row: 2 / 3;
-  }
-
-  .selected-work-type {
-    grid-column: 9 / 12;
+    padding-top: 2rem;
+    grid-column: 5 / 13;
     grid-row: 2 / 3;
   }
 
   .selected-work-description {
-    grid-column: 9 / 12;
-    grid-row: 2 / 3;
-    padding-top: 3rem;
-  }
-
-  .selected-work-date {
-    grid-column: 12 / 13;
+    padding-top: 2rem;
+    grid-column: 1 / 5;
     grid-row: 2 / 3;
   }
 
