--- a/src/components/SelectedWork.css
+++ b/src/components/SelectedWork.css
@@ -1,12 +1,11 @@
-@keyframes fade-down {
+@keyframes fade-in {
   0% {
     opacity: 0;
-    animation-delay: 3s;
-    transform: translateY(-30px) scale(0.9);
   }
 
   50% {
     opacity: 0;
+    transform: translateY(-30px) scale(0.9);
   }
 
   100% {
@@ -23,18 +22,23 @@
   cursor: pointer;
 }
 
-.headings-list-item-b {
+.headings-list-item-b,
+.selected-work-type {
   display: none;
 }
 
+.selected-works-page {
+  padding-bottom: 6rem;
+}
+
 .selected-works-list-item.closed {
-  height: 6rem;
+  height: 2rem;
   padding-bottom: 0.5rem;
   transition: all 1s cubic-bezier(0.2, 1, 0.3, 1);
 }
 
 .selected-works-list-item.open {
-  height: 25rem;
+  height: 30rem;
   padding-bottom: 0.5rem;
   grid-template-rows: min-content;
   transition: all 1s cubic-bezier(0.2, 1, 0.3, 1);
@@ -49,7 +53,7 @@
   max-height: 20rem;
   overflow: visible;
   padding-bottom: 1rem;
-  animation: fade-down 1s;
+  animation: fade-in 1s;
 }
 
 .video-wrapper.closed {
@@ -58,13 +62,13 @@
 }
 
 .video-wrapper.open {
-  max-height: 20rem;
+  max-height: 25rem;
   overflow: visible;
-  animation: fade-down 1s;
+  animation: fade-in 1s;
 }
 
 .selected-works-video {
-  height: 100%;
+  height: 15rem;
   width: 100%;
   border: none;
 }
@@ -82,7 +86,8 @@
 
 .selected-work-heading,
 .video-wrapper,
-.selected-work-type {
+.selected-work-type,
+.selected-work-date {
   padding-top: 0.5rem;
 }
 
@@ -90,13 +95,64 @@
   padding-bottom: 0.5rem;
 }
 
+.selected-works-headings-list,
+.selected-works-list-item {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-template-rows: auto;
+  column-gap: 1rem;
+}
+
+.headings-list-item-a {
+  grid-column: 1 / 4;
+  grid-row: 1 / 2;
+}
+
+.headings-list-item-c {
+  grid-column: 4 / 5;
+  grid-row: 1 / 2;
+}
+
+.selected-work-heading {
+  grid-column: 1 / 4;
+  grid-row: 1 / 2;
+}
+
 .selected-work-date {
-  padding-bottom: 0.5rem;
+  grid-column: 4 / 5;
+  grid-row: 1 / 2;
+}
+
+.video-wrapper {
+  padding-top: 2rem;
+  grid-column: 1 / 5;
+  grid-row: 2 / 3;
+}
+
+.selected-work-description {
+  padding-top: 2rem;
+  grid-column: 1 / 5;
+  grid-row: 3 / 4;
+}
+
+.selected-works-list-item {
+  grid-column: 1 / 5;
+}
+
+.selected-work-border-top {
+  grid-column: 1 / 5;
+  grid-row: 1 / 3;
+}
+
+.selected-work-border-bottom {
+  grid-column: 1 / 5;
+  grid-row: 3 / 4;
 }
 
 @media only screen and (min-width: 40rem) {
-  .selected-works-headings-list {
-    display: none;
+  .headings-list-item-b,
+  .selected-work-type {
+    display: block;
   }
 
   .selected-work-heading,
@@ -125,93 +181,73 @@
   }
 
   .selected-works-list-item.closed {
-    height: auto;
-    padding-bottom: 0.5rem;
-    grid-template-rows: 0rem;
-    transition: all 1s cubic-bezier(0.2, 1, 0.3, 1);
+    height: 4rem;
   }
 
   .selected-works-list-item.open {
-    height: 25rem;
-    padding-bottom: 0.5rem;
-    grid-template-rows: min-content;
-    transition: all 1s cubic-bezier(0.2, 1, 0.3, 1);
+    height: 30rem;
   }
 
-  /* .selected-works-headings-list,
-  .selected-works-list,
-  .selected-works-list-item,
-  .selected-works-intro {
+  .selected-works-headings-list,
+  .selected-works-list-item {
     display: grid;
     grid-template-columns: repeat(8, 1fr);
-    grid-template-rows: auto;
-    column-gap: 1rem;
-  }
-
-  .selected-works-intro-text {
-    grid-column: 1 / 6;
-    grid-row: 2 / 3;
   }
 
   .headings-list-item-a {
-    grid-column: 1 / 3;
+    grid-column: 1 / 4;
     grid-row: 1 / 2;
   }
 
   .headings-list-item-b {
-    grid-column: 3 / 6;
+    grid-column: 4 / 7;
     grid-row: 1 / 2;
   }
 
   .headings-list-item-c {
-    grid-column: 9 / 12;
-    grid-row: 1 / 2;
-  }
-
-  .headings-list-item-d {
-    grid-column: 12 / 13;
+    grid-column: 7 / 9;
     grid-row: 1 / 2;
   }
 
   .selected-work-heading {
-    grid-column: 1 / 3;
-    grid-row: 2 / 3;
-  }
-
-  .video-wrapper {
-    grid-column: 3 / 6;
-    grid-row: 2 / 3;
+    grid-column: 1 / 4;
+    grid-row: 1 / 2;
   }
 
   .selected-work-type {
-    grid-column: 9 / 12;
+    grid-column: 4 / 7;
+    grid-row: 1 / 2;
+  }
+
+  .selected-work-date {
+    grid-column: 7 / 9;
+    grid-row: 1 / 2;
+  }
+
+  .video-wrapper {
+    grid-column: 4 / 9;
     grid-row: 2 / 3;
   }
 
   .selected-work-description {
-    grid-column: 9 / 12;
+    grid-column: 1 / 4;
     grid-row: 2 / 3;
     padding-top: 3rem;
   }
 
-  .selected-work-date {
-    grid-column: 12 / 13;
-    grid-row: 2 / 3;
-  }
-
   .selected-works-list-item {
-    grid-column: 1 / 13;
+    grid-column: 1 / 9;
   }
 
   .selected-work-border-top {
-    grid-column: 1 / 13;
+    grid-column: 1 / 9;
     grid-row: 1 / 3;
   }
 
   .selected-work-border-bottom {
-    grid-column: 1 / 13;
+    grid-column: 1 / 9;
     grid-row: 3 / 4;
-  } */
+  }
 }
 
 @media only screen and (min-width: 70rem) {
@@ -234,10 +270,6 @@
     padding: 0 2rem;
   }
 
-  .selected-works-page {
-    padding-bottom: 6rem;
-  }
-
   .selected-works-video {
     height: 20rem;
     width: 40rem;
@@ -245,24 +277,17 @@
 
   .selected-works-list-item.closed {
     height: 2.5rem;
-    padding-bottom: 0.5rem;
-    transition: all 1s cubic-bezier(0.2, 1, 0.3, 1);
   }
 
   .selected-works-list-item.open {
     height: 25rem;
-    padding-bottom: 0.5rem;
-    grid-template-rows: min-content;
-    transition: all 1s cubic-bezier(0.2, 1, 0.3, 1);
   }
 
   .selected-works-headings-list,
-  .selected-works-list,
   .selected-works-list-item,
   .selected-works-intro {
     display: grid;
     grid-template-columns: repeat(12, 1fr);
-    grid-template-rows: min-content;
     column-gap: 1rem;
   }
 
