--- a/src/index.css
+++ b/src/index.css
@@ -37,10 +37,10 @@ a {
 .selected-works-page,
 .about-page,
 .extras-page {
-  padding-top: 5rem;
+  padding: 5rem 1rem;
 }
 
-@media only screen and (min-width: 50rem) {
+@media only screen and (min-width: 40rem) {
   p {
     font-size: 1rem;
   }
