--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -3,8 +3,10 @@
 }
 
 .home-page {
-  display: grid;
   padding: 1rem;
+  display: flex;
+  justify-content: center;
+
   background-color: #e7e2d6;
 }
 
@@ -13,43 +15,12 @@
   padding-bottom: 1rem;
 }
 
+.home-title {
+  width: 78%;
+}
+
 @media only screen and (min-width: 50rem) {
 }
 
 @media only screen and (min-width: 70rem) {
-  .home-page {
-    padding-top: 30rem;
-  }
-
-  .home-heading {
-    font-size: 18rem;
-    margin-block-start: 0em;
-    margin-block-end: 0em;
-    font-weight: normal;
-    text-indent: -0.55rem;
-    padding-top: 0rem;
-    padding-bottom: 0rem;
-    padding-left: 2rem;
-    font-family: "Pinyon Script", cursive;
-  }
-
-  .contact-details {
-    padding-top: 12rem;
-  }
-
-  .home-main-grid {
-    grid-template-columns: repeat(12, 1fr);
-    grid-template-rows: auto 10rem;
-    gap: 1rem;
-  }
-
-  .home-heading {
-    grid-column: 1 / 10;
-    grid-row: 1 / 2;
-  }
-
-  .contact-details {
-    grid-column: 11 / 13;
-    grid-row: 1 / 2;
-  }
 }
