--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -7,7 +7,7 @@
   display: flex;
   justify-content: center;
 
-  background-color: #e7e2d6;
+  /* background-color: #e7e2d6; */
 }
 
 .home-heading {
