--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -3,7 +3,7 @@
 }
 
 .home-page {
-  padding: 1rem;
+  padding: 2rem 1rem 5rem;
   display: flex;
   justify-content: center;
 
@@ -16,7 +16,7 @@
 }
 
 .home-title {
-  width: 78%;
+  width: 75%;
 }
 
 @media only screen and (min-width: 50rem) {
