--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -3,7 +3,7 @@
 }
 
 .home-page {
-  padding: 2rem 1rem 5rem;
+  padding: 2rem 1rem 0rem;
   display: flex;
   justify-content: center;
 
@@ -16,7 +16,14 @@
 }
 
 .home-title {
-  width: 75%;
+  width: 72%;
+  min-width: 50rem;
+}
+
+.sub-heading-text {
+  display: flex;
+  justify-content: center;
+  padding-bottom: 5rem;
 }
 
 @media only screen and (min-width: 50rem) {
