--- a/src/components/MusicPlayer.css
+++ b/src/components/MusicPlayer.css
@@ -68,43 +68,101 @@
   transform: scale(1.3);
 }
 
-@media only screen and (min-width: 50rem) {
+.audio-player {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-template-rows: auto;
+  column-gap: 1rem;
+  padding: 0.5rem 1rem;
+  margin: 2rem 1%;
 }
 
-@media only screen and (min-width: 70rem) {
-  .audio-player {
-    display: grid;
-    grid-template-columns: repeat(12, 1fr);
-    grid-template-rows: auto;
-    column-gap: 1rem;
-    padding: 0.5rem 1rem;
-    margin: 2rem 1%;
-  }
+.audio-progress-bar {
+  display: flex;
+  align-items: center;
+  padding: 1rem 0;
+}
 
-  .audio-progress-bar {
-    display: flex;
-    align-items: center;
-  }
+.audio-button {
+  display: flex;
+  align-items: center;
+}
 
-  .song-name,
-  .audio-time-before-after {
-    font-size: 0.7rem;
-  }
+.audio-time-before-after {
+  padding-right: 1rem;
+}
 
+.song-name {
+  grid-column: 1 / 3;
+  grid-row: 1 / 2;
+}
+
+.audio-progress-bar {
+  grid-column: 1 / 5;
+  grid-row: 2 / 3;
+}
+
+.audio-controls {
+  grid-column: 3 / 5;
+  grid-row: 1 / 2;
+}
+
+.song-name,
+.audio-time-before-after {
+  font-size: 0.7rem;
+}
+
+.audio-controls,
+.audio-control-buttons,
+.song-name {
+  display: flex;
+  align-items: center;
+}
+
+.audio-controls {
+  justify-content: flex-end;
+}
+
+@media only screen and (min-width: 50rem) {
   .audio-controls,
-  .audio-control-buttons {
+  .audio-control-buttons,
+  .song-name {
     display: flex;
     align-items: center;
     justify-content: center;
   }
 
-  .audio-button {
-    display: flex;
-    align-items: center;
+  .audio-player {
+    grid-template-columns: repeat(8, 1fr);
   }
 
-  .audio-time-before-after {
-    padding-right: 1rem;
+  .audio-progress-bar {
+    display: flex;
+    align-items: center;
+    padding: 1rem 0;
+  }
+
+  .song-name {
+    grid-column: 1 / 2;
+    grid-row: 1 / 2;
+  }
+
+  .audio-progress-bar {
+    grid-column: 2 / 7;
+    grid-row: 1 / 2;
+  }
+
+  .audio-controls {
+    grid-column: 7 / 9;
+    grid-row: 1 / 2;
+  }
+}
+
+@media only screen and (min-width: 70rem) {
+  .audio-player {
+    grid-template-columns: repeat(12, 1fr);
+    padding: 0.5rem 1rem;
+    margin: 2rem 1%;
   }
 
   .song-name {
