--- a/src/components/Nav.css
+++ b/src/components/Nav.css
@@ -1,7 +1,9 @@
 .sticky-nav {
   position: fixed;
-  bottom: 1rem;
-  left: 1rem;
+  width: 15rem;
+  bottom: 2rem;
+  left: 50%;
+  transform: translate(-50%, 0);
 }
 
 .nav-list-item {
@@ -49,14 +51,12 @@
 
 @media only screen and (min-width: 40rem) {
   .sticky-nav {
-    width: 25rem;
+    width: 15rem;
+    bottom: 2rem;
+    left: 2rem;
+    transform: none;
   }
 }
 
 @media only screen and (min-width: 70rem) {
-  .sticky-nav {
-    width: 15rem;
-    bottom: 2rem;
-    left: 2rem;
-  }
 }
