Updated nav style and functionality

--- a/src/components/Nav.css
+++ b/src/components/Nav.css
@@ -8,6 +8,7 @@
 
 .nav-list-item {
   border: solid 0.05rem;
+  border-radius: 1.5rem;
   margin-right: 0.5rem;
   border-color: #542316;
   background-color: #f1f2ec;
@@ -20,8 +21,12 @@
 
 .nav-list-link {
   display: block;
+  padding: 0.5rem 0.5rem;
   width: 100%;
-  padding: 0.2rem 0;
+}
+
+.nav-list-home {
+  padding: 0.5rem 0.8rem;
 }
 
 .nav-grid {
@@ -42,7 +47,8 @@
   display: flex;
   justify-content: center;
   background-color: #542316;
-  transition: all 1s cubic-bezier(0.2, 1, 0.3, 1);
+  border-radius: 1.5rem;
+  transition: background-color 1s cubic-bezier(0.2, 1, 0.3, 1);
 }
 
 .nav-list-icon {
