--- a/src/components/SelectedWork.css
+++ b/src/components/SelectedWork.css
@@ -1,11 +1,13 @@
 .selected-works-list-item {
   cursor: pointer;
+  transition: all 1s cubic-bezier(0.16, 1, 0.3, 1);
 }
 
 .slider {
   height: 100%;
   display: flex;
-  overflow-x: auto;
+  /* overflow: auto; */
+  overflow: hidden;
   scroll-snap-type: x mandatory;
   scroll-behavior: smooth;
 }
