--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -2,6 +2,14 @@
   background-color: #f7f3f0;
 }
 
+html {
+  scroll-snap-type: y proximity;
+}
+
+.selected-works-page {
+  scroll-snap-align: center;
+}
+
 .home-page {
   padding: 2rem 1rem 0rem;
   display: flex;
