Fixed an issue where selected works arrows were bound to the project box

--- a/src/components/Nav.css
+++ b/src/components/Nav.css
@@ -20,6 +20,7 @@
 
 .nav-list-link:hover {
   background-color: #ffc4b4;
+  color: #542316;
   transition: all 1s cubic-bezier(0.2, 1, 0.3, 1);
 }
 
