--- a/src/components/About.css
+++ b/src/components/About.css
@@ -50,6 +50,10 @@
   font-size: 1.8rem;
 }
 
+.about-page-intro {
+  letter-spacing: -0.25rem;
+}
+
 @media only screen and (min-width: 40rem) {
   .about-page {
     padding: 2rem 1rem 5rem;
