--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -12,16 +12,18 @@
   scroll-snap-align: start;
 } */
 
-.home-page {
-  padding: 8rem 1rem 0rem;
-  display: flex;
-  justify-content: center;
-
-  /* background-color: #e7e2d6; */
+.home-title-content {
+  margin: 0;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -ms-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
 }
 
 .landing-page {
-  padding-bottom: 9rem;
+  height: 100vh;
+  position: relative;
 }
 
 .home-heading {
@@ -30,18 +32,41 @@
 }
 
 .home-title {
-  width: 75%;
-  min-width: 50rem;
+  width: 20rem;
   padding-bottom: 2rem;
 }
 
 .sub-heading-text {
-  display: flex;
-  justify-content: center;
+  margin: 0;
+  font-size: 1rem;
+  text-align: center;
+  position: absolute;
+  top: 100%;
+  left: 50%;
+  -ms-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
 }
 
 @media only screen and (min-width: 50rem) {
+  .sub-heading-text {
+    margin: 0;
+    text-align: left;
+    position: absolute;
+    top: 100%;
+    left: 50%;
+    -ms-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+  }
+
+  .home-title {
+    width: 50rem;
+    padding-bottom: 2rem;
+  }
 }
 
 @media only screen and (min-width: 70rem) {
+  .home-title {
+    width: 70rem;
+    padding-bottom: 2rem;
+  }
 }
