--- a/src/components/SelectedWorks.css
+++ b/src/components/SelectedWorks.css
@@ -6,21 +6,13 @@
 .slider {
   height: 100%;
   display: flex;
-  /* overflow: auto; */
+  overflow: auto;
   overflow: hidden;
   scroll-behavior: smooth;
 }
 
-.slide,
-.selected-works-page {
+.slide {
   position: relative;
-}
-
-.selected-work-image {
-  width: 100vw;
-  height: 100vh;
-  flex: 1 0 100%;
-  object-fit: cover;
 }
 
 .project-overlay-text,
@@ -68,6 +60,42 @@
   background-color: #542316;
   transition: all 1s cubic-bezier(0.16, 1, 0.3, 1);
   opacity: 1;
+}
+
+/* Sticky image animation */
+.selected-works-page {
+  height: 300vh;
+  position: relative;
+}
+
+.sticky {
+  position: sticky;
+  top: 0px;
+  height: 100vh;
+  overflow: hidden;
+}
+
+.el {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.selected-image-container {
+  width: 25vw;
+  height: 25vh;
+  position: relative;
+  will-change: transform;
+}
+
+.selected-work-image {
+  object-fit: cover;
+  width: 25vw;
+  height: 25vh;
 }
 
 @media only screen and (min-width: 40rem) {
