--- a/src/components/SelectedWorks.css
+++ b/src/components/SelectedWorks.css
@@ -6,13 +6,21 @@
 .slider {
   height: 100%;
   display: flex;
-  overflow: auto;
+  /* overflow: auto; */
   overflow: hidden;
   scroll-behavior: smooth;
 }
 
-.slide {
+.slide,
+.selected-works-page {
   position: relative;
+}
+
+.selected-work-image {
+  height: 100vh;
+  width: 100vw;
+  object-fit: cover;
+  flex: 1 0 100%;
 }
 
 .project-overlay-text,
@@ -60,42 +68,6 @@
   background-color: #542316;
   transition: all 1s cubic-bezier(0.16, 1, 0.3, 1);
   opacity: 1;
-}
-
-/* Sticky image animation */
-.selected-works-page {
-  height: 300vh;
-  position: relative;
-}
-
-.sticky {
-  position: sticky;
-  top: 0px;
-  height: 100vh;
-  overflow: hidden;
-}
-
-.el {
-  width: 100%;
-  height: 100%;
-  position: absolute;
-  top: 0px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
-.selected-image-container {
-  width: 25vw;
-  height: 25vh;
-  position: relative;
-  will-change: transform;
-}
-
-.selected-work-image {
-  object-fit: cover;
-  width: 25vw;
-  height: 25vh;
 }
 
 @media only screen and (min-width: 40rem) {
