--- a/src/components/About.css
+++ b/src/components/About.css
@@ -148,7 +148,7 @@
   }
 
   .about-profile-image {
-    /* max-width: 50rem; */
+    max-width: 70rem;
     max-height: 45rem;
     margin: 0 auto;
     margin-bottom: 3rem;
