--- a/src/components/SelectedWorks.css
+++ b/src/components/SelectedWorks.css
@@ -3,12 +3,17 @@
   transition: all 1s cubic-bezier(0.16, 1, 0.3, 1);
 }
 
+.slider-wrapper {
+  padding: 0 0 4rem;
+}
+
 .slider {
   height: 100%;
   display: flex;
   /* overflow: auto; */
   overflow: hidden;
   scroll-behavior: smooth;
+  gap: 4rem;
 }
 
 .slide,
@@ -17,10 +22,15 @@
 }
 
 .selected-work-image {
-  height: 100vh;
-  width: 100vw;
+  width: 97vw;
+  height: 90vh;
   object-fit: cover;
-  flex: 1 0 100%;
+  /* flex: 1 0 100%; */
+  border-radius: 1rem;
+}
+
+.selected-works-list-item {
+  padding: 0 2rem;
 }
 
 .project-overlay-text,
