--- a/src/components/SelectedWorks.css
+++ b/src/components/SelectedWorks.css
@@ -12,7 +12,7 @@
 }
 
 .slider-wrapper {
-  height: 75vh;
+  height: 78vh;
   width: 100%;
   position: relative;
 }
@@ -49,8 +49,8 @@
 }
 
 .project-overlay-text {
-  top: 4rem;
-  left: 4rem;
+  top: 2rem;
+  left: 1rem;
 }
 
 .overlay-text-colour {
@@ -68,27 +68,43 @@
 }
 
 .image-slider-left-arrow {
-  left: 4rem;
+  left: 1rem;
   bottom: 50%;
   color: #542316;
 }
 
 .image-slider-right-arrow {
-  right: 4rem;
+  right: 1rem;
   bottom: 50%;
   color: #542316;
 }
 
 .image-slider-left-arrow:hover,
 .image-slider-right-arrow:hover {
-  color: white;
-  border-color: #542316;
-  background-color: #542316;
+  color: #2c2c2c;
+  /* border-color: #2c2c2c; */
+  background-color: white;
   transition: all 1s cubic-bezier(0.16, 1, 0.3, 1);
   opacity: 1;
 }
 
 @media only screen and (min-width: 40rem) {
+  .project-overlay-text {
+    top: 4rem;
+    left: 4rem;
+  }
+
+  .image-slider-left-arrow {
+    left: 4rem;
+    bottom: 50%;
+    color: #542316;
+  }
+
+  .image-slider-right-arrow {
+    right: 4rem;
+    bottom: 50%;
+    color: #542316;
+  }
 }
 
 @media only screen and (min-width: 70rem) {
